<resources>
    <string name="app_name">Deutsche</string>

    <string name="alphabets">Alphabets</string>
    <string name="numbers">Numbers</string>
    <string name="greetings">Greeting</string>
    <string name="phrases">Frequent Phrases</string>
    <string name="days">Days of Week</string>
    <string name="months">Months</string>
    <string name="colours">Colours</string>
    <string name="family">Family</string>

    <string name="letter">Letter</string>
    <string name="pron">Pronunciation</string>
    <string name="number">Numbers</string>
    <string name="numberToWord">In words</string>
    <string name="day">Day</string>
    <string name="in_german">In German</string>
    <string name="colour">Colour</string>



    <string name="test">Take Test</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>



    <string name="no_account">Don\'t have an account yet?</string>
    <string name="yes_account">Already have an account yet?</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="name">Name</string>
</resources>
