<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="63dp">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/alphabets"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@color/browser_actions_bg_grey"
                    android:gravity="center"
                    android:text="@string/alphabets"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/numbers"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:text="@string/numbers"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/greetings"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@color/browser_actions_bg_grey"
                    android:gravity="center"
                    android:text="@string/greetings"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/phrases"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:text="@string/phrases"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/days"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@color/browser_actions_bg_grey"
                    android:gravity="center"
                    android:text="@string/days"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/months"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:text="@string/months"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/colours"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@color/browser_actions_bg_grey"
                    android:gravity="center"
                    android:text="@string/colours"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/family"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:text="@string/family"
                    android:textSize="25sp" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/test_layout"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#707070" />
            <TextView
                android:id="@+id/test_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="fill_vertical|center_horizontal"
                android:text="@string/test"
                android:background="@color/browser_actions_bg_grey"
                android:textSize="30sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#000" />
        </LinearLayout>


    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>

